# reactos

./: CMakeLists.txt
base/setup/lib/: setuplib.c
base/setup/reactos/: drivepage.c  reactos.c
base/setup/reactos/lang/: bg-BG.rc  cs-CZ.rc  de-DE.rc  el-GR.rc  en-US.rc  es-ES.rc  et-EE.rc  eu-ES.rc  fi-FI.rc  fr-FR.rc  he-IL.rc  hi-IN.rc  hu-HU.rc  id-ID.rc  it-IT.rc  ja-JP.rc  ms-MY.rc  no-NO.rc  pl-PL.rc  pt-BR.rc  pt-PT.rc  ro-RO.rc  ru-RU.rc  sk-SK.rc  sq-AL.rc  tr-TR.rc  uk-UA.rc  vi-VN.rc  zh-CN.rc  zh-HK.rc  zh-TW.rc
base/setup/usetup/: usetup.c
boot/: boot_images.cmake
boot/bootdata/: hivedef.inf
boot/bootdata/bootcd/: unattend.inf
boot/freeldr/freeldr/: freeldr.c
dll/ntdll/: CMakeLists.txt  _errno.c
dll/ntdll/def/: ntdll.spec
dll/win32/: CMakeLists.txt
dll/win32/iphlpapi/: icmp.c  iphlpapi.spec  iphlpapi_main.c
dll/win32/kernel32/: kernel32.spec
dll/win32/kernel32/client/: fiber.c
dll/win32/kernel32/kernel32_vista/: CMakeLists.txt  GetSystemDEPPolicy.c
dll/win32/setupapi/: interface.c
dll/win32/shell32/: icon_res.rc  iconcache.cpp  shell32.rc  shell32.spec  shresdef.h  utils.h
dll/win32/shell32/dialogs/: filetypes.cpp
dll/win32/shell32/folders/: CFSFolder.cpp  CRegFolder.cpp
dll/win32/shell32/lang/: bg-BG.rc  da-DK.rc  de-DE.rc  el-GR.rc  es-ES.rc  et-EE.rc  fr-FR.rc  he-IL.rc  it-IT.rc  ja-JP.rc  ko-KR.rc  lt-LT.rc  nl-NL.rc  (+10 more)
dll/win32/shlwapi/: CMakeLists.txt  propbag.cpp  shlwapi.spec
dll/win32/shunimpl/: CMakeLists.txt  main.c  shunimpl.spec
dll/win32/syssetup/: resource.h  wizard.c
dll/win32/userenv/: userenv.rc
modules/rostests/apitests/ntdll/: CMakeLists.txt  NtCreateThread.c  NtQuerySystemInformation.c  RtlFls.c  testlist.c
modules/rostests/apitests/ntdll/amd64/: NtCreateThread.S
modules/rostests/apitests/ntdll/crt/: __isascii.c  __iscsym.c  __iscsymf.c  __toascii.c  _abs64.c  _atoi64.c  _errno.c  _i64toa.c  _i64toa_s.c  _i64tow.c  _i64tow_s.c  _itoa.c  _itoa_s.c  _itow.c  _itow_s.c  _makepath_s.c  _memccpy.c  _memicmp.c  _scprintf.c  _snprintf.c  _snprintf_s.c  _snscanf_s.c  _snwprintf.c  _snwprintf_s.c  _snwscanf_s.c  _splitpath.c  _splitpath_s.c  _stricmp.c  _strlwr.c  _strlwr_s.c  _strnicmp.c  _strnset_s.c  _strset_s.c  _strupr.c  _strupr_s.c  _swprintf.c  _ui64toa.c  _ui64toa_s.c  _ui64tow.c  _ui64tow_s.c  (+105 more)
ntoskrnl/: CMakeLists.txt  ntoskrnl.spec
ntoskrnl/ex/: init.c  win32k.c
ntoskrnl/inbv/: bootanim.c
ntoskrnl/include/: sysfuncs.h
ntoskrnl/include/internal/: cm.h  io.h  ps.h
ntoskrnl/io/iomgr/: file.c
ntoskrnl/ntkrnlmp/: CMakeLists.txt
ntoskrnl/ob/: obhandle.c  oblife.c
ntoskrnl/ps/: process.c  psmgr.c  thread.c
ntoskrnl/ps/amd64/: psctx.c
ntoskrnl/ps/arm/: psctx.c
ntoskrnl/ps/i386/: psctx.c
ntoskrnl/wmi/: guidobj.c
sdk/cmake/: config.cmake  msvc.cmake
sdk/include/crt/: crtdefs.h  stdio.h
sdk/include/ndk/: obtypes.h  psfuncs.h  pstypes.h  rtlfuncs.h  rtltypes.h
sdk/include/psdk/: netioapi.h
sdk/include/reactos/: rossym.h  stubs.h  version.cmake
sdk/include/vcruntime/: vcruntime.h
sdk/lib/: CMakeLists.txt
sdk/lib/crt/: libcntpr.cmake
sdk/lib/libcnt/: CMakeLists.txt
sdk/lib/libcnt/src/: ntrtl.h
sdk/lib/libcnt/src/convert/: _atoi64.cpp  _i64toa.cpp  _i64toa_s.cpp  _i64tow.cpp  _i64tow_s.cpp  _itoa.cpp  _itoa_s.cpp  _itow.cpp  _itow_s.cpp  _strtoi64.cpp  _strtoui64.cpp  _ui64toa.cpp  _ui64toa_s.cpp  _ui64tow.cpp  _ui64tow_s.cpp  _ultoa.cpp  _ultoa_s.cpp  _ultow.cpp  _ultow_s.cpp  _wcstoi64.cpp  _wcstoui64.cpp  _wtoi.cpp  _wtoi64.cpp  atoi.cpp  atol.cpp  strtol.cpp  strtoul.cpp  strtoull.cpp  tcstox_impl.hpp  wcstol.cpp  wcstoul.cpp  xtostr_impl.hpp
sdk/lib/libcnt/src/ctype/: __isascii.c  __iscsym.c  __iscsymf.c  __iswcsym.c  __iswcsymf.c  __mb_cur_max.c  __toascii.c  _ctype.c  _ctype.h  _isctype.c  _wctype.c  _wctype.h  isalnum.c  isalpha.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  iswalnum.c  iswalpha.c  iswascii.c  iswcntrl.c  iswctype.c  iswdigit.c  iswgraph.c  iswlower.c  iswprint.c  iswpunct.c  iswspace.c  iswupper.c  iswxdigit.c  isxdigit.c  tolower.c  toupper.c  towlower.c  towupper.c
sdk/lib/libcnt/src/misc/: _errno.c  _invalid_parameter.c  _invalid_parameter_noinfo.c  rand.c
sdk/lib/libcnt/src/stdio/: _input.cpp  _input.hpp  _output.cpp  _output.hpp  _snprintf.cpp  _snprintf_s.cpp  _snscanf.cpp  _snscanf_s.cpp  _snwprintf.cpp  _snwprintf_s.cpp  _snwscanf_s.cpp  _swprintf.cpp  _vscprintf.cpp  _vscwprintf.cpp  _vsnprintf.cpp  _vsnprintf_s.cpp  _vsnwprintf.cpp  _vsnwprintf_s.cpp  _vswprintf.cpp  sprintf.cpp  sprintf_s.cpp  sscanf.cpp  sscanf_s.cpp  swprintf.cpp  swprintf_s.cpp  swscanf.cpp  swscanf_s.cpp  vsprintf.cpp  vsprintf_s.cpp  vswprintf.cpp  vswprintf_s.cpp
sdk/lib/libcnt/src/stdlib/: _abs64.c  _lfind.c  _makepath_s.c  _splitpath.c  _splitpath_s.c  _wmakepath_s.c  _wsplitpath_s.c  abs.c  bsearch.c  bsearch_s.c  mbstowcs.c  mbtowc.c  qsort.cpp  qsort.hpp  qsort_s.cpp  wcstombs.c  wctomb.c
sdk/lib/libcnt/src/string/: __strncnt.c  _memccpy.c  _memicmp.c  _stricmp.c  _strlwr.c  _strlwr_s.c  _strnicmp.c  _strnset.c  _strnset_s.c  _strrev.c  _strset.c  _strset_s.c  _strupr.c  _strupr_s.c  _wcsicmp.c  _wcslwr.c  _wcslwr_s.c  _wcsnicmp.c  _wcsnset.c  _wcsnset_s.c  _wcsrev.c  _wcsset_s.c  _wcsupr.c  _wcsupr_s.c  memcpy_s.c  memmove_s.c  strcat.c  strcat_s.c  strcmp.c  strcpy.c  strcpy_s.c  strcspn.c  strlen.c  strlen.txt  strncat.c  strncat_s.c  strncmp.c  strncpy.c  strncpy_s.c  strnlen.c  (+19 more)
sdk/lib/rtl/: CMakeLists.txt  fls.c  ntuserdisp.s  ntuserpfn.c  thread.c
sdk/lib/vcruntime/: CMakeLists.txt  memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  strchr.c  strrchr.c  strstr.c  wcschr.c  wcsrchr.c  wcsstr.c
sdk/lib/vcruntime/amd64/: __memmove_init.c  __memset_init.c  _local_unwind.c  chandler.c  memmove.asm  memset.asm
sdk/lib/vcruntime/i386/: __memmove_init.c  __memset_init.c  memmove.asm  memset.asm
sdk/lib/vcruntime/inc/: internal_shared.h
sdk/tools/asmpp/: asmpp.cpp
sdk/tools/rsym/: rsym.h
win32ss/drivers/videoprt/: videoprt.c
win32ss/gdi/eng/: surface.c
win32ss/user/ntuser/: winsta.c
(+71 files in other folders)
